<resources>
    <string name="app_name">Record Keeper</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="running_image_description">Running Image</string>
    <string name="five_km_heading">5 KM</string>
    <string name="ten_km_heading">10 KM</string>
    <string name="half_marathon_heading">Half Marathon</string>
    <string name="marathon_heading">Marathon</string>
    <string name="cycling_image_description">Cycling Image</string>
    <string name="cycling_text">CYCLING</string>
    <string name="longest_ride">Longest Ride</string>
    <string name="biggest_climb">Biggest Climb</string>
    <string name="average_speed">Average Speed</string>
    <string name="top_speed">Top Speed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">
        Hello
        blank
        fragment
    </string>
    <string name="reset_running_records">Reset Running Records</string>
    <string name="reset_cycling_records">Reset Cycling Records</string>
    <string name="reset_all_records">Reset All Records</string>
</resources>